<resources>
    <string name="app_name">MathTask</string>
    <string name="solve">Solve</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="multi">×</string>
    <string name="plus">+</string>
    <string name="equ">=</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="division">÷</string>
    <string name="minus">-</string>
    <string name="leftArrow"><![CDATA[<]]></string>
    <string name="rightArrow"><![CDATA[>]]></string>
    <string name="x">X</string>
    <string name="module">|▯|</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>
    <string name="pi">π</string>
    <string name="exp">e</string>
    <string name="grad">°</string>
    <string name="scs">scs</string>
    <string name="func">func</string>
    <string name="elev">elev</string>
    <string name="i">i</string>
    <string name="mat">mat</string>
    <string name="rank">rank</string>
    <string name="det">det</string>
</resources>
